Improved alignment between the content and icon of the app title, improved alignment between the add a member button and a member's avatar, fixed padding of the app close button

--- a/frontend_app_workspace_advanced/src/css/index.styl
+++ b/frontend_app_workspace_advanced/src/css/index.styl
@@ -53,7 +53,11 @@ label()
         display flex
         align-items center
         border-top 1px solid grey
-        padding 10px
+        padding 10px 15px
+        &__avatar
+          & > img
+            width 50px
+            height 50px
         &__role
           margin 0 50px 0 auto
           .btndropdown
@@ -84,7 +88,7 @@ label()
           cursor pointer
     &__adduser
       border-top 1px solid grey
-      padding 20px
+      padding 15px
       &__button
         display flex
         align-items center
