--- a/frontend_lib/src/component/PopinFixed/PopinFixed.styl
+++ b/frontend_lib/src/component/PopinFixed/PopinFixed.styl
@@ -14,7 +14,7 @@
   &__header
     display flex
     align-items center
-    padding 15px
+    padding 15px 10px
     height 62px
     &__icon
       margin-right 15px
@@ -43,6 +43,7 @@
     &__close
       border 1px solid white
       border-radius 5px
+      padding 3px 7px
       & > i
         color white
         font-size 20px
